made some divs and styled those divs with adding a background image also adding some text and color with text-shadow

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <script defer src="app.js"></script>
 </head>
 <body>
-    
+<h1 id="h11">The Hang Man Hang out!!</h1>
+<h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h3>
 </body>
 </html>
