--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 <h1 id="h11">The Hang Man Hang out!!</h1>
+
 <h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h3>
+
+<form id="input">
+    <input id="guessALetter" type="text" placeholder="letter">
+
+    <input id="guess" name="guess" type="submit" value="Guess" />
+
+    <button id="restart" name="restart" type="button">Restart</button>
+</form>
+
 </body>
 </html>
