--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
 <h1 id="h11">The Hang Man Hang out!!</h1>
 
-<h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h3>
+<h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h2>
+<form>
+<input id="guessBox" type="text" placeholder="             - - - - - -">
 
-<form id="input">
-    <input id="guessALetter" type="text" placeholder="letter">
+<input id="guess" name="guess" type="submit" value="Guess" />
 
-    <input id="guess" name="guess" type="submit" value="Guess" />
-
-    <button id="restart" name="restart" type="button">Restart</button>
+<button id="restart" name="restart" type="button">Restart</button>
 </form>
 
 </body>
