i completly restart and added some buttons formy keyboard

--- a/index.html
+++ b/index.html
@@ -12,13 +12,42 @@
 <h1 id="h11">The Hang Man Hang out!!</h1>
 
 <h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h2>
-<form>
-<input id="guessBox" type="text" placeholder="             - - - - - -">
 
-<input id="guess" name="guess" type="submit" value="Guess" />
-
-<button id="restart" name="restart" type="button">Restart</button>
-</form>
+<div class="keyboard">
+    <div class='first'>
+        <input class="button" type="button" value='Q'>
+        <input class="button" type="button" value='W'>
+        <input class="button" type="button" value='E'>
+        <input class="button" type="button" value='R'>
+        <input class="button" type="button" value='T'>
+        <input class="button" type="button" value='Y'>
+        <input class="button" type="button" value='U'>
+        <input class="button" type="button" value='I'>
+        <input class="button" type="button" value='O'>
+        <input class="button" type="button" value='P'>
+    </div>
+    <br>
+    <div class='second'>
+        <input class="button" type="button" data-key='65' value='A'>
+        <input class="button" type="button" value='S'>
+        <input class="button" type="button" value='D'>
+        <input class="button" type="button" value='F'>
+        <input class="button" type="button" value='G'>
+        <input class="button" type="button" value='H'>
+        <input class="button" type="button" value='J'>
+        <input class="button" type="button" value='K'>
+        <input class="button" type="button" value='L'>
+    </div>
+    <br>
+    <div class='third'>
+        <input class="button" type="button" value='Z'>
+        <input class="button" type="button" value='X'>
+        <input class="button" type="button" value='C'>
+        <input class="button" type="button" value='V'>
+        <input class="button" type="button" value='B'>
+        <input class="button" type="button" value='N'>
+        <input class="button" type="button" value='M'>
+    </div>
 
 </body>
 </html>
