made some functions and they work

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h2>
 
+<div class="answer-container"></div>
 <div class="keyboard">
     <div class='first'>
         <input class="button" type="button" value='Q'>
