added some comments to my index page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
    <script defer src="app.js"></script>
 </head>
 <body>
+    <!-- giving my page a header -->
 <h1 id="h11">The Hang Man Hang out!!</h1>
-
+<!-- making a quote  -->
 <h2 id="h21">welcome to the Hangman Hangout where Hangman is our game and everything else is lame!!</h2>
-
+<!-- making a container for my array -->
 <div class="answer-container"></div>
+<!-- making my keyboard -->
 <div class="keyboard">
     <div class='first'>
         <input class="button" type="button" value='Q'>
